--- a/app.html
+++ b/app.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SeaConnect Feeds</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>SeaConnect</title>
 
 <style>
 
@@ -31,7 +31,7 @@ margin-bottom:16px;
 box-shadow:0 10px 30px rgba(0,0,0,.35);
 }
 
-textarea,input{
+input{
 width:100%;
 padding:12px;
 border-radius:14px;
@@ -41,8 +41,6 @@ box-sizing:border-box;
 background:rgba(255,255,255,0.05);
 color:#fff;
 }
-
-textarea{min-height:90px;}
 
 button{
 padding:11px 16px;
@@ -58,8 +56,13 @@ color:#fff;
 }
 
 .danger{
-background:#ef4444;
-color:white;
+background:linear-gradient(135deg,#ef4444,#dc2626);
+color:#fff;
+}
+
+.light{
+background:rgba(255,255,255,0.1);
+color:#fff;
 }
 
 .row{
@@ -68,44 +71,24 @@ gap:10px;
 margin-top:12px;
 }
 
-.feedPhoto{
-width:100%;
-margin-top:10px;
-border-radius:16px;
-}
-
-.comment{
-padding:8px;
-margin-top:6px;
-background:rgba(255,255,255,0.06);
-border-radius:12px;
-font-size:13px;
-display:flex;
-justify-content:space-between;
-}
-
-.title{
-font-size:22px;
-font-weight:900;
-margin-bottom:15px;
-}
-
 .subText{
 font-size:13px;
 color:#94a3b8;
 }
 
-.avatar{
-width:40px;
-height:40px;
+/* ONLINE RING */
+
+.profileRing{
+display:inline-block;
+padding:3px;
 border-radius:50%;
-object-fit:cover;
-border:3px solid transparent;
 }
 
-.avatar.online{
-border-color:#22c55e;
+.profileRing.online{
+box-shadow:0 0 0 3px #22c55e;
 }
+
+/* NAV */
 
 .bottomnav{
 position:fixed;
@@ -136,67 +119,102 @@ color:#3b82f6;
 font-weight:800;
 }
 
+#profilePhoto{
+width:120px;
+height:120px;
+border-radius:50%;
+object-fit:cover;
+border:4px solid #e5e7eb;
+}
+
 </style>
 </head>
 
 <body>
 
-<div id="feedsPage" class="page">
+<!-- PROFILE PAGE -->
 
-<div class="title">📰 Crew Feeds</div>
+<div id="profilePage" class="page" style="display:block;">
 
-<div class="card">
-
-<div style="font-weight:900;margin-bottom:8px;">Create Post</div>
-
-<textarea id="feedInput" placeholder="What’s happening on board?"></textarea>
-
-<input type="file" id="feedPhoto" accept="image/*">
-
-<img id="previewPhoto" style="display:none;width:100%;margin-top:10px;border-radius:16px">
-
-<div class="row">
-<button id="postBtn" class="primary" onclick="createFeed()">Post</button>
+<div style="display:flex;justify-content:space-between;">
+<h2>👤 My Profile</h2>
+<button class="danger" onclick="logout()">Logout</button>
 </div>
 
-<div id="postMsg" class="subText"></div>
+<div class="card" style="text-align:center">
+
+<div id="profileRing" class="profileRing">
+
+<img id="profilePhoto"
+src="https://i.ibb.co/2kRZ7Z6/avatar.png">
 
 </div>
 
-<div id="feedsList"></div>
+<br><br>
+
+<input type="file" id="photoInput" accept="image/*" style="display:none">
+
+<button class="primary"
+onclick="document.getElementById('photoInput').click()">
+Upload Photo
+</button>
+
+<br><br>
+
+<div id="profileName"
+style="font-size:24px;font-weight:900"></div>
+
+<div id="profileRank"
+style="color:#6b7280"></div>
 
 </div>
+
+</div>
+
+<!-- NAVIGATION -->
 
 <div class="bottomnav">
 
-<button class="active" onclick="showPage('feedsPage',this)">📰 Feeds</button>
-<button onclick="location.href='app.html'">👤 Profile</button>
+<button onclick="location.href='feeds.html'">
+📰 Feeds
+</button>
+
+<button>
+👥 Friends
+</button>
+
+<button>
+💬 Messages
+</button>
+
+<button class="active">
+👤 Profile
+</button>
 
 </div>
 
 <script type="module">
 
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+import { initializeApp } from
+"https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 
 import {
 getAuth,
-onAuthStateChanged
-} from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+onAuthStateChanged,
+signOut
+}
+from
+"https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
 import {
 getFirestore,
-collection,
-addDoc,
-query,
-orderBy,
-onSnapshot,
 doc,
 getDoc,
-deleteDoc,
-updateDoc,
-where,
-setDoc
-} from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+setDoc,
+updateDoc
+}
+from
+"https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
 const firebaseConfig={
 apiKey:"AIzaSyCNlodsmEHrSXxgH0gTOcx4cAXwG8qmG9w",
@@ -208,26 +226,9 @@ const app=initializeApp(firebaseConfig);
 const auth=getAuth(app);
 const db=getFirestore(app);
 
-const IMGBB_KEY="5b417e8de4a883f7425eeda12dc38f06";
-
 let currentUID=null;
-let currentEmail="";
-let isPosting=false;
 
-const feedsList=document.getElementById("feedsList");
-
-window.showPage=function(id,btn){
-
-document.querySelectorAll(".page").forEach(p=>p.style.display="none");
-
-document.querySelectorAll(".bottomnav button")
-.forEach(b=>b.classList.remove("active"));
-
-document.getElementById(id).style.display="block";
-
-if(btn) btn.classList.add("active");
-
-};
+const IMGBB_KEY="5b417e8de4a883f7425eeda12dc38f06";
 
 onAuthStateChanged(auth,async(user)=>{
 
@@ -237,297 +238,92 @@ return;
 }
 
 currentUID=user.uid;
-currentEmail=user.email;
 
-await setDoc(doc(db,"users",currentUID),{
-online:true,
-lastSeen:Date.now()
-},{merge:true});
+setOnline(true);
 
-showPage("feedsPage");
-
-loadFeeds();
+loadProfile();
 
 });
 
-window.addEventListener("beforeunload",async()=>{
-
-if(currentUID){
-
-await setDoc(doc(db,"users",currentUID),{
-online:false,
-lastSeen:Date.now()
-},{merge:true});
-
-}
-
-});
-
-window.createFeed=async function(){
-
-if(isPosting) return;
-
-const btn=document.getElementById("postBtn");
-const msg=document.getElementById("postMsg");
-
-isPosting=true;
-
-btn.disabled=true;
-btn.innerText="Posting...";
-
-try{
-
-const text=document.getElementById("feedInput").value.trim();
-const file=document.getElementById("feedPhoto").files[0];
-
-let photoURL="";
-
-if(file){
-
-const formData=new FormData();
-formData.append("image",file);
-
-const res=await fetch("https://api.imgbb.com/1/upload?key="+IMGBB_KEY,{method:"POST",body:formData});
-
-const data=await res.json();
-
-if(data.success){
-photoURL=data.data.url;
-}
-
-}
-
-const userSnap=await getDoc(doc(db,"users",currentUID));
-const userData=userSnap.data()||{};
-
-await addDoc(collection(db,"feeds"),{
-
-uid:currentUID,
-name:userData.name || currentEmail.split("@")[0],
-rank:userData.rank || "",
-photoProfile:userData.photo || "",
-text:text,
-photo:photoURL,
-likes:[],
-createdAt:Date.now()
-
-});
-
-document.getElementById("feedInput").value="";
-document.getElementById("feedPhoto").value="";
-document.getElementById("previewPhoto").style.display="none";
-
-msg.innerText="Posted";
-
-btn.disabled=false;
-btn.innerText="Post";
-
-isPosting=false;
-
-}catch(e){
-
-alert("Post failed");
-
-btn.disabled=false;
-btn.innerText="Post";
-
-isPosting=false;
-
-}
-
-};
-
-function loadFeeds(){
-
-const q=query(collection(db,"feeds"),orderBy("createdAt","desc"));
-
-onSnapshot(q,(snap)=>{
-
-feedsList.innerHTML="";
-
-snap.forEach(async docSnap=>{
-
-const d=docSnap.data();
-const id=docSnap.id;
-
-const likesArr=d.likes||[];
-const liked=likesArr.includes(currentUID);
-
-let online=false;
-
-try{
-
-const userSnap=await getDoc(doc(db,"users",d.uid));
-online=userSnap.data()?.online || false;
-
-}catch{}
-
-feedsList.innerHTML+=`
-
-<div class="card">
-
-<div style="display:flex;gap:10px;align-items:center;">
-
-<img src="${d.photoProfile || 'https://i.ibb.co/2kRZ7Z6/avatar.png'}"
-class="avatar ${online ? 'online':''}">
-
-<div>
-<div style="font-weight:900">${d.name}</div>
-<div class="subText">${d.rank || ""}</div>
-</div>
-
-</div>
-
-<div style="margin-top:10px">${d.text||""}</div>
-
-${d.photo?`<img src="${d.photo}" class="feedPhoto">`:""}
-
-<div class="row">
-
-<button onclick="toggleLike('${id}')">
-${liked?"💙 Liked":"👍 Like"}
-</button>
-
-<span class="subText">${likesArr.length} likes</span>
-
-${d.uid===currentUID?`
-<button class="danger" onclick="deletePost('${id}')">Delete</button>
-`:""}
-
-</div>
-
-<div style="margin-top:10px">
-
-<input id="commentInput-${id}" placeholder="Write comment">
-
-<button onclick="sendComment('${id}')">Send</button>
-
-<div id="comments-${id}"></div>
-
-</div>
-
-</div>
-
-`;
-
-loadComments(id);
-
-});
-
+async function setOnline(state){
+
+await updateDoc(doc(db,"users",currentUID),{
+online:state,
+lastActive:Date.now()
 });
 
 }
 
-window.toggleLike=async function(id){
+window.addEventListener("beforeunload",()=>{
+setOnline(false);
+});
 
-const ref=doc(db,"feeds",id);
-const snap=await getDoc(ref);
+async function loadProfile(){
 
-let likes=snap.data().likes||[];
+const snap=await getDoc(doc(db,"users",currentUID));
 
-if(likes.includes(currentUID)){
-likes=likes.filter(x=>x!==currentUID);
+const d=snap.data()||{};
+
+if(d.photo){
+profilePhoto.src=d.photo;
+}
+
+profileName.innerText=d.name||"";
+profileRank.innerText=d.rank||"";
+
+/* ONLINE RING */
+
+const ring=document.getElementById("profileRing");
+
+if(d.online){
+ring.classList.add("online");
 }else{
-likes.push(currentUID);
+ring.classList.remove("online");
 }
-
-await updateDoc(ref,{likes});
-
-};
-
-window.deletePost=async function(id){
-
-if(confirm("Delete post?")){
-await deleteDoc(doc(db,"feeds",id));
-}
-
-};
-
-window.sendComment=async function(feedId){
-
-const input=document.getElementById("commentInput-"+feedId);
-const text=input.value.trim();
-
-if(!text) return;
-
-await addDoc(collection(db,"comments"),{
-
-feedId:feedId,
-uid:currentUID,
-name:"User",
-text:text,
-createdAt:Date.now()
-
-});
-
-input.value="";
-
-};
-
-function loadComments(feedId){
-
-const q=query(collection(db,"comments"),where("feedId","==",feedId));
-
-onSnapshot(q,(snap)=>{
-
-const box=document.getElementById("comments-"+feedId);
-
-if(!box) return;
-
-box.innerHTML="";
-
-snap.forEach(docSnap=>{
-
-const d=docSnap.data();
-
-box.innerHTML+=`
-
-<div class="comment">
-
-<div>
-<b>${d.name}</b>: ${d.text}
-</div>
-
-${d.uid===currentUID?`
-<button class="danger" onclick="deleteComment('${docSnap.id}')">Delete</button>
-`:""}
-
-</div>
-
-`;
-
-});
-
-});
 
 }
 
-window.deleteComment=async function(id){
-
-if(confirm("Delete comment?")){
-await deleteDoc(doc(db,"comments",id));
-}
-
-};
-
-document.getElementById("feedPhoto").addEventListener("change",function(){
+document.getElementById("photoInput")
+.addEventListener("change",async function(){
 
 const file=this.files[0];
-
 if(!file) return;
 
 const reader=new FileReader();
 
 reader.onload=function(e){
-
-document.getElementById("previewPhoto").src=e.target.result;
-document.getElementById("previewPhoto").style.display="block";
-
+profilePhoto.src=e.target.result;
 };
 
 reader.readAsDataURL(file);
 
+const formData=new FormData();
+formData.append("image",file);
+
+const res=await fetch(
+"https://api.imgbb.com/1/upload?key="+IMGBB_KEY,
+{method:"POST",body:formData}
+);
+
+const data=await res.json();
+
+const imageUrl=data.data.url;
+
+await setDoc(doc(db,"users",currentUID),{
+photo:imageUrl
+},{merge:true});
+
+alert("Photo uploaded successfully");
+
 });
+
+window.logout=async function(){
+
+await signOut(auth);
+
+location.href="index.html";
+
+};
 
 </script>
 
