--- a/app.html
+++ b/app.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>SeaConnect</title>
 
 <style>
@@ -37,7 +37,6 @@ padding:12px;
 border-radius:14px;
 border:1px solid rgba(255,255,255,0.15);
 margin-top:6px;
-box-sizing:border-box;
 background:rgba(255,255,255,0.05);
 color:#fff;
 }
@@ -48,7 +47,6 @@ border:none;
 border-radius:14px;
 font-weight:700;
 cursor:pointer;
-transition:all .2s ease;
 }
 
 .primary{
@@ -72,7 +70,7 @@ gap:10px;
 margin-top:12px;
 }
 
-.row > button{
+.row button{
 flex:1;
 }
 
@@ -110,19 +108,17 @@ color:#3b82f6;
 font-weight:800;
 }
 
-/* ONLINE RING */
+/* PROFILE PHOTO WITH GREEN ONLINE RING */
 
-.avatarRing{
-display:inline-flex;
-justify-content:center;
-align-items:center;
-padding:6px;
+.profileWrapper{
+display:inline-block;
+padding:4px;
 border-radius:50%;
-border:4px solid #22c55e;
-box-shadow:0 0 20px rgba(34,197,94,.6);
+background:linear-gradient(45deg,#22c55e,#16a34a);
+box-shadow:0 0 20px rgba(34,197,94,0.7);
 }
 
-#profilePhoto{
+.profileWrapper img{
 width:120px;
 height:120px;
 border-radius:50%;
@@ -142,40 +138,34 @@ display:block;
 <button class="danger" onclick="logout()">Logout</button>
 </div>
 
+<!-- PROFILE CARD -->
+
 <div class="card" style="text-align:center">
 
-<div class="avatarRing">
-<img id="profilePhoto"
-src="https://i.ibb.co/2kRZ7Z6/avatar.png">
+<div class="profileWrapper">
+<img id="profilePhoto" src="https://i.ibb.co/2kRZ7Z6/avatar.png">
 </div>
 
 <br><br>
 
 <input type="file" id="photoInput" accept="image/*" style="display:none">
 
-<button class="primary"
-onclick="document.getElementById('photoInput').click()">
-Upload Photo
-</button>
+<button class="primary" onclick="photoInput.click()">Upload Photo</button>
 
 <br><br>
 
-<div id="profileName"
-style="font-size:24px;font-weight:900"></div>
-
-<div id="profileRank"
-style="color:#6b7280"></div>
+<div id="profileName" style="font-size:24px;font-weight:900"></div>
+<div id="profileRank" style="color:#6b7280"></div>
 
 </div>
+
+<!-- PROFESSIONAL INFO -->
 
 <div class="card">
 
 <div style="display:flex;justify-content:space-between;">
 <div style="font-weight:900">Professional Information</div>
-
-<button class="light" onclick="toggleInfo()" id="infoBtn">
-Show
-</button>
+<button class="light" onclick="toggleInfo()" id="infoBtn">Show</button>
 </div>
 
 <div id="infoSection" style="display:none;margin-top:12px">
@@ -199,41 +189,101 @@ Show
 <div id="profileAddress"></div>
 
 </div>
+
 </div>
+
+<!-- EDIT PROFILE -->
+
+<div class="card">
+
+<button class="primary" onclick="toggleEdit()">Edit Profile</button>
+
+<div id="editSection" style="display:none;margin-top:20px">
+
+<label>Name</label>
+<input id="nameInput">
+
+<label>Rank</label>
+<input id="rankInput">
+
+<label>Company</label>
+<input id="companyInput">
+
+<label>Vessel</label>
+<input id="vesselInput">
+
+<label>Experience</label>
+<input id="experienceInput">
+
+<label>Phone</label>
+<input id="phoneInput">
+
+<label>Address</label>
+<input id="addressInput">
+
+<div class="row">
+<button class="primary" onclick="saveProfile()">Save</button>
+<button class="light" onclick="toggleEdit()">Cancel</button>
+</div>
+
+</div>
+
+</div>
+
+<!-- DOCUMENTS -->
+
+<div class="card">
+
+<div style="display:flex;justify-content:space-between;">
+<div style="font-weight:900">📄 My Documents</div>
+<button class="primary" onclick="toggleDocForm()">Add</button>
+</div>
+
+<div id="docFormSection" style="display:none;margin-top:20px">
+
+<label>Document Type</label>
+<input id="docTypeInput">
+
+<label>Document Number</label>
+<input id="docNumberInput">
+
+<label>Issue Date</label>
+<input type="date" id="docIssueInput">
+
+<label>Expiry Date</label>
+<input type="date" id="docExpiryInput">
+
+<div class="row">
+<button class="primary" onclick="addDocument()">Save</button>
+<button class="light" onclick="toggleDocForm()">Cancel</button>
+</div>
+
+</div>
+
+</div>
+
+<div id="documentsList"></div>
+
+</div>
+
+<!-- NAV -->
 
 <div class="bottomnav">
 
-<button onclick="location.href='feeds.html'">
-📰 Feeds
-</button>
-
-<button class="active">
-👤 Profile
-</button>
+<button onclick="location.href='feeds.html'">📰 Feeds</button>
+<button class="active">👤 Profile</button>
 
 </div>
 
 <script type="module">
 
-import { initializeApp } from
-"https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 
-import {
-getAuth,
-onAuthStateChanged,
-signOut
-}
-from
-"https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+import { getAuth,onAuthStateChanged,signOut }
+from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
-import {
-getFirestore,
-doc,
-getDoc,
-setDoc
-}
-from
-"https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+import { getFirestore,doc,getDoc,setDoc,collection,addDoc,query,where,onSnapshot,deleteDoc }
+from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
 const firebaseConfig={
 apiKey:"AIzaSyCNlodsmEHrSXxgH0gTOcx4cAXwG8qmG9w",
@@ -250,10 +300,12 @@ let currentEmail=null;
 
 const IMGBB_KEY="5b417e8de4a883f7425eeda12dc38f06";
 
+/* TOGGLE INFO */
+
 window.toggleInfo=function(){
 
-const sec=document.getElementById("infoSection");
-const btn=document.getElementById("infoBtn");
+const sec=infoSection;
+const btn=infoBtn;
 
 const show=sec.style.display==="none";
 
@@ -261,6 +313,22 @@ sec.style.display=show?"block":"none";
 btn.innerText=show?"Hide":"Show";
 
 };
+
+/* TOGGLE EDIT */
+
+window.toggleEdit=function(){
+editSection.style.display=
+(editSection.style.display==="none"||editSection.style.display==="")?"block":"none";
+};
+
+/* TOGGLE DOCUMENT FORM */
+
+window.toggleDocForm=function(){
+docFormSection.style.display=
+(docFormSection.style.display==="none"||docFormSection.style.display==="")?"block":"none";
+};
+
+/* AUTH */
 
 onAuthStateChanged(auth,async(user)=>{
 
@@ -273,17 +341,18 @@ currentUID=user.uid;
 currentEmail=user.email.toLowerCase();
 
 loadProfile();
+loadDocuments();
 
 });
+
+/* LOAD PROFILE */
 
 async function loadProfile(){
 
 const snap=await getDoc(doc(db,"users",currentUID));
 const d=snap.data()||{};
 
-if(d.photo){
-profilePhoto.src=d.photo;
-}
+if(d.photo) profilePhoto.src=d.photo;
 
 profileName.innerText=d.name||"";
 profileRank.innerText=d.rank||"";
@@ -295,26 +364,129 @@ profileExperience.innerText=d.experience||"-";
 profilePhone.innerText=d.phone||"-";
 profileAddress.innerText=d.address||"-";
 
+nameInput.value=d.name||"";
+rankInput.value=d.rank||"";
+companyInput.value=d.company||"";
+vesselInput.value=d.vessel||"";
+experienceInput.value=d.experience||"";
+phoneInput.value=d.phone||"";
+addressInput.value=d.address||"";
+
 }
 
-document.getElementById("photoInput")
-.addEventListener("change",async function(){
+/* SAVE PROFILE */
+
+window.saveProfile=async function(){
+
+await setDoc(doc(db,"users",currentUID),{
+
+email:currentEmail,
+name:nameInput.value,
+rank:rankInput.value,
+company:companyInput.value,
+vessel:vesselInput.value,
+experience:experienceInput.value,
+phone:phoneInput.value,
+address:addressInput.value
+
+},{merge:true});
+
+alert("Profile saved");
+
+toggleEdit();
+loadProfile();
+
+};
+
+/* ADD DOCUMENT */
+
+window.addDocument=async function(){
+
+const type=docTypeInput.value.trim();
+
+if(!type) return alert("Enter document type");
+
+await addDoc(collection(db,"documents"),{
+
+uid:currentUID,
+type:type,
+number:docNumberInput.value,
+issue:docIssueInput.value,
+expiry:docExpiryInput.value,
+createdAt:Date.now()
+
+});
+
+docTypeInput.value="";
+docNumberInput.value="";
+docIssueInput.value="";
+docExpiryInput.value="";
+
+toggleDocForm();
+
+};
+
+/* LOAD DOCUMENTS */
+
+function loadDocuments(){
+
+const q=query(collection(db,"documents"),where("uid","==",currentUID));
+
+onSnapshot(q,(snap)=>{
+
+documentsList.innerHTML="";
+
+snap.forEach(docSnap=>{
+
+const d=docSnap.data();
+const id=docSnap.id;
+
+documentsList.innerHTML+=`
+<div class="card">
+
+<div style="font-weight:900">${d.type}</div>
+
+<div class="subText">Number</div>
+${d.number||"-"}
+
+<div class="subText">Expiry</div>
+${d.expiry||"-"}
+
+<br><br>
+
+<button class="danger"
+onclick="deleteDocument('${id}')">
+Delete
+</button>
+
+</div>`;
+
+});
+
+});
+
+}
+
+/* DELETE DOCUMENT */
+
+window.deleteDocument=async function(id){
+await deleteDoc(doc(db,"documents",id));
+};
+
+/* PHOTO UPLOAD */
+
+photoInput.addEventListener("change",async function(){
 
 const file=this.files[0];
 if(!file) return;
 
 const reader=new FileReader();
 
-reader.onload=function(e){
-profilePhoto.src=e.target.result;
-};
-
+reader.onload=e=>profilePhoto.src=e.target.result;
 reader.readAsDataURL(file);
 
 const formData=new FormData();
 formData.append("image",file);
-
-try{
 
 const res=await fetch(
 "https://api.imgbb.com/1/upload?key="+IMGBB_KEY,
@@ -323,27 +495,17 @@ const res=await fetch(
 
 const data=await res.json();
 
-const imageUrl=data.data.url;
-
 await setDoc(doc(db,"users",currentUID),{
-photo:imageUrl
+photo:data.data.url
 },{merge:true});
-
-alert("Photo uploaded successfully");
-
-}catch(e){
-
-alert("Upload failed");
-
-}
 
 });
 
-window.logout=async function(){
+/* LOGOUT */
 
+window.logout=async function(){
 await signOut(auth);
 location.href="index.html";
-
 };
 
 </script>
