--- a/app.html
+++ b/app.html
@@ -1,115 +1,21 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html><html><head><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>SeaConnect</title><style>
+body{margin:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;background:linear-gradient(180deg,#0f172a,#1e293b);color:#f1f5f9;}
+.page{display:none;padding:20px;padding-bottom:95px;}
+.card{background:rgba(255,255,255,0.06);backdrop-filter:blur(12px);border:1px solid rgba(255,255,255,0.08);padding:18px;border-radius:22px;margin-bottom:16px;box-shadow:0 10px 30px rgba(0,0,0,.35);}
+input{width:100%;padding:12px;border-radius:14px;border:1px solid rgba(255,255,255,0.15);margin-top:6px;box-sizing:border-box;background:rgba(255,255,255,0.05);color:#fff;}
+button{padding:11px 16px;border:none;border-radius:14px;font-weight:700;cursor:pointer;transition:all .2s ease;}
+.primary{background:linear-gradient(135deg,#3b82f6,#2563eb);color:#fff;}
+.danger{background:linear-gradient(135deg,#ef4444,#dc2626);color:#fff;}
+.light{background:rgba(255,255,255,0.1);color:#fff;}
+.row{display:flex;gap:10px;margin-top:12px;}
+.row > button{flex:1;}
+.subText{font-size:13px;color:#94a3b8;}
+.bottomnav{position:fixed;bottom:15px;left:50%;transform:translateX(-50%);width:90%;height:65px;background:rgba(15,23,42,0.9);backdrop-filter:blur(10px);border-radius:22px;display:flex;justify-content:space-around;align-items:center;box-shadow:0 10px 40px rgba(0,0,0,.6);}
+.bottomnav button{background:none;border:none;font-size:12px;font-weight:600;color:#94a3b8;}
+.bottomnav button.active{color:#3b82f6;font-weight:800;}
+#profilePhoto{box-shadow:0 0 30px rgba(59,130,246,.5);}
 
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SeaConnect</title>
-
-<style>
-
-body{
-margin:0;
-font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;
-background:linear-gradient(180deg,#0f172a,#1e293b);
-color:#f1f5f9;
-}
-
-.page{
-display:none;
-padding:20px;
-padding-bottom:95px;
-}
-
-.card{
-background:rgba(255,255,255,0.06);
-backdrop-filter:blur(12px);
-border:1px solid rgba(255,255,255,0.08);
-padding:18px;
-border-radius:22px;
-margin-bottom:16px;
-box-shadow:0 10px 30px rgba(0,0,0,.35);
-}
-
-input{
-width:100%;
-padding:12px;
-border-radius:14px;
-border:1px solid rgba(255,255,255,0.15);
-margin-top:6px;
-background:rgba(255,255,255,0.05);
-color:#fff;
-}
-
-button{
-padding:11px 16px;
-border:none;
-border-radius:14px;
-font-weight:700;
-cursor:pointer;
-}
-
-.primary{
-background:linear-gradient(135deg,#3b82f6,#2563eb);
-color:#fff;
-}
-
-.danger{
-background:linear-gradient(135deg,#ef4444,#dc2626);
-color:#fff;
-}
-
-.light{
-background:rgba(255,255,255,0.1);
-color:#fff;
-}
-
-.row{
-display:flex;
-gap:10px;
-margin-top:12px;
-}
-
-.row button{
-flex:1;
-}
-
-.subText{
-font-size:13px;
-color:#94a3b8;
-}
-
-.bottomnav{
-position:fixed;
-bottom:15px;
-left:50%;
-transform:translateX(-50%);
-width:90%;
-height:65px;
-background:rgba(15,23,42,0.9);
-backdrop-filter:blur(10px);
-border-radius:22px;
-display:flex;
-justify-content:space-around;
-align-items:center;
-box-shadow:0 10px 40px rgba(0,0,0,.6);
-}
-
-.bottomnav button{
-background:none;
-border:none;
-font-size:12px;
-font-weight:600;
-color:#94a3b8;
-}
-
-.bottomnav button.active{
-color:#3b82f6;
-font-weight:800;
-}
-
-/* PROFILE PHOTO WITH GREEN ONLINE RING */
-
+/* NEW: GREEN ONLINE RING */
 .profileWrapper{
 display:inline-block;
 padding:4px;
@@ -117,7 +23,6 @@ border-radius:50%;
 background:linear-gradient(45deg,#22c55e,#16a34a);
 box-shadow:0 0 20px rgba(34,197,94,0.7);
 }
-
 .profileWrapper img{
 width:120px;
 height:120px;
@@ -125,12 +30,27 @@ border-radius:50%;
 object-fit:cover;
 display:block;
 }
+</style></head><body>
 
-</style>
-</head>
+<!-- FEEDS PLACEHOLDER -->
+<div id="feedsPage" class="page">
+<h2>📰 Feeds</h2>
+<div class="card subText">Feeds are in the main feed page.</div>
+</div>
 
-<body>
+<!-- FRIENDS -->
+<div id="friendsPage" class="page">
+<h2>👥 Friends</h2>
+<div class="card subText">Friends will be here.</div>
+</div>
 
+<!-- MESSAGES -->
+<div id="messagesPage" class="page">
+<h2>💬 Messages</h2>
+<div class="card subText">Messages will be here.</div>
+</div>
+
+<!-- PROFILE -->
 <div id="profilePage" class="page" style="display:block;">
 
 <div style="display:flex;justify-content:space-between;">
@@ -138,10 +58,9 @@ display:block;
 <button class="danger" onclick="logout()">Logout</button>
 </div>
 
-<!-- PROFILE CARD -->
-
 <div class="card" style="text-align:center">
 
+<!-- UPDATED PHOTO WITH GREEN RING -->
 <div class="profileWrapper">
 <img id="profilePhoto" src="https://i.ibb.co/2kRZ7Z6/avatar.png">
 </div>
@@ -150,17 +69,16 @@ display:block;
 
 <input type="file" id="photoInput" accept="image/*" style="display:none">
 
-<button class="primary" onclick="photoInput.click()">Upload Photo</button>
+<button class="primary"onclick="document.getElementById('photoInput').click()">Upload Photo</button>
 
 <br><br>
 
-<div id="profileName" style="font-size:24px;font-weight:900"></div>
-<div id="profileRank" style="color:#6b7280"></div>
+<div id="profileName"style="font-size:24px;font-weight:900"></div>
+<div id="profileRank"style="color:#6b7280"></div>
 
 </div>
 
 <!-- PROFESSIONAL INFO -->
-
 <div class="card">
 
 <div style="display:flex;justify-content:space-between;">
@@ -189,18 +107,16 @@ display:block;
 <div id="profileAddress"></div>
 
 </div>
-
 </div>
 
 <!-- EDIT PROFILE -->
-
 <div class="card">
 
 <button class="primary" onclick="toggleEdit()">Edit Profile</button>
 
 <div id="editSection" style="display:none;margin-top:20px">
 
-<label>Name</label>
+<label>Full Name</label>
 <input id="nameInput">
 
 <label>Rank</label>
@@ -227,11 +143,9 @@ display:block;
 </div>
 
 </div>
-
 </div>
 
 <!-- DOCUMENTS -->
-
 <div class="card">
 
 <div style="display:flex;justify-content:space-between;">
@@ -266,24 +180,19 @@ display:block;
 
 </div>
 
-<!-- NAV -->
-
+<!-- NAVIGATION -->
 <div class="bottomnav">
-
 <button onclick="location.href='feeds.html'">📰 Feeds</button>
-<button class="active">👤 Profile</button>
-
+<button onclick="showPage('friendsPage',this)">👥 Friends</button>
+<button onclick="showPage('messagesPage',this)">💬 Messages</button>
+<button class="active" onclick="showPage('profilePage',this)">👤 Profile</button>
 </div>
 
 <script type="module">
 
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-
-import { getAuth,onAuthStateChanged,signOut }
-from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-
-import { getFirestore,doc,getDoc,setDoc,collection,addDoc,query,where,onSnapshot,deleteDoc }
-from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+import {getAuth,onAuthStateChanged,signOut} from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+import {getFirestore,doc,getDoc,setDoc,collection,addDoc,query,where,onSnapshot,deleteDoc} from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
 const firebaseConfig={
 apiKey:"AIzaSyCNlodsmEHrSXxgH0gTOcx4cAXwG8qmG9w",
@@ -300,70 +209,54 @@ let currentEmail=null;
 
 const IMGBB_KEY="5b417e8de4a883f7425eeda12dc38f06";
 
-/* TOGGLE INFO */
+window.showPage=function(id,btn){
+document.querySelectorAll(".page").forEach(p=>p.style.display="none");
+document.querySelectorAll(".bottomnav button").forEach(b=>b.classList.remove("active"));
+document.getElementById(id).style.display="block";
+btn.classList.add("active");
+};
 
 window.toggleInfo=function(){
-
-const sec=infoSection;
-const btn=infoBtn;
-
+const sec=document.getElementById("infoSection");
+const btn=document.getElementById("infoBtn");
 const show=sec.style.display==="none";
-
 sec.style.display=show?"block":"none";
 btn.innerText=show?"Hide":"Show";
-
 };
-
-/* TOGGLE EDIT */
 
 window.toggleEdit=function(){
-editSection.style.display=
-(editSection.style.display==="none"||editSection.style.display==="")?"block":"none";
+const s=document.getElementById("editSection");
+s.style.display=(s.style.display==="none"||s.style.display==="")?"block":"none";
 };
-
-/* TOGGLE DOCUMENT FORM */
 
 window.toggleDocForm=function(){
-docFormSection.style.display=
-(docFormSection.style.display==="none"||docFormSection.style.display==="")?"block":"none";
+const s=document.getElementById("docFormSection");
+s.style.display=(s.style.display==="none"||s.style.display==="")?"block":"none";
 };
 
-/* AUTH */
-
 onAuthStateChanged(auth,async(user)=>{
-
 if(!user){
 location.href="index.html";
 return;
 }
-
 currentUID=user.uid;
 currentEmail=user.email.toLowerCase();
-
 loadProfile();
 loadDocuments();
-
 });
 
-/* LOAD PROFILE */
-
 async function loadProfile(){
-
 const snap=await getDoc(doc(db,"users",currentUID));
 const d=snap.data()||{};
-
-if(d.photo) profilePhoto.src=d.photo;
-
+if(d.photo){profilePhoto.src=d.photo;}
 profileName.innerText=d.name||"";
 profileRank.innerText=d.rank||"";
-
 profileEmail.innerText=d.email||"";
 profileCompany.innerText=d.company||"-";
 profileVessel.innerText=d.vessel||"-";
 profileExperience.innerText=d.experience||"-";
 profilePhone.innerText=d.phone||"-";
 profileAddress.innerText=d.address||"-";
-
 nameInput.value=d.name||"";
 rankInput.value=d.rank||"";
 companyInput.value=d.company||"";
@@ -371,15 +264,10 @@ vesselInput.value=d.vessel||"";
 experienceInput.value=d.experience||"";
 phoneInput.value=d.phone||"";
 addressInput.value=d.address||"";
-
 }
 
-/* SAVE PROFILE */
-
 window.saveProfile=async function(){
-
 await setDoc(doc(db,"users",currentUID),{
-
 email:currentEmail,
 name:nameInput.value,
 rank:rankInput.value,
@@ -388,120 +276,105 @@ vessel:vesselInput.value,
 experience:experienceInput.value,
 phone:phoneInput.value,
 address:addressInput.value
-
 },{merge:true});
-
 alert("Profile saved");
-
 toggleEdit();
 loadProfile();
-
 };
 
-/* ADD DOCUMENT */
-
 window.addDocument=async function(){
-
 const type=docTypeInput.value.trim();
-
-if(!type) return alert("Enter document type");
+if(!type)return alert("Enter document type");
 
 await addDoc(collection(db,"documents"),{
-
 uid:currentUID,
 type:type,
 number:docNumberInput.value,
 issue:docIssueInput.value,
 expiry:docExpiryInput.value,
 createdAt:Date.now()
-
 });
 
 docTypeInput.value="";
 docNumberInput.value="";
 docIssueInput.value="";
 docExpiryInput.value="";
-
 toggleDocForm();
-
 };
-
-/* LOAD DOCUMENTS */
 
 function loadDocuments(){
 
 const q=query(collection(db,"documents"),where("uid","==",currentUID));
 
 onSnapshot(q,(snap)=>{
-
 documentsList.innerHTML="";
-
 snap.forEach(docSnap=>{
-
 const d=docSnap.data();
 const id=docSnap.id;
 
+let status="";
+let color="#111";
+
+if(d.expiry){
+const diff=Math.ceil((new Date(d.expiry)-new Date())/(1000*60*60*24));
+if(diff<0){status="❌ Expired";color="#ef4444";}
+else if(diff<=30){status="⚠️ "+diff+" days left";color="#f59e0b";}
+else{status="✅ "+diff+" days left";color="#16a34a";}
+}
+
 documentsList.innerHTML+=`
 <div class="card">
-
 <div style="font-weight:900">${d.type}</div>
-
-<div class="subText">Number</div>
-${d.number||"-"}
-
-<div class="subText">Expiry</div>
-${d.expiry||"-"}
-
+<div class="subText">Number</div>${d.number||"-"}
+<div class="subText">Expiry</div>${d.expiry||"-"}
+<span style="color:${color}">${status}</span>
 <br><br>
-
-<button class="danger"
-onclick="deleteDocument('${id}')">
-Delete
-</button>
-
+<button class="danger" onclick="deleteDocument('${id}')">Delete</button>
 </div>`;
-
 });
-
 });
 
 }
-
-/* DELETE DOCUMENT */
 
 window.deleteDocument=async function(id){
 await deleteDoc(doc(db,"documents",id));
 };
 
-/* PHOTO UPLOAD */
-
-photoInput.addEventListener("change",async function(){
+document.getElementById("photoInput").addEventListener("change",async function(){
 
 const file=this.files[0];
 if(!file) return;
 
 const reader=new FileReader();
 
-reader.onload=e=>profilePhoto.src=e.target.result;
+reader.onload=function(e){
+profilePhoto.src=e.target.result;
+};
+
 reader.readAsDataURL(file);
 
 const formData=new FormData();
 formData.append("image",file);
 
-const res=await fetch(
-"https://api.imgbb.com/1/upload?key="+IMGBB_KEY,
-{method:"POST",body:formData}
-);
+try{
 
-const data=await res.json();
-
-await setDoc(doc(db,"users",currentUID),{
-photo:data.data.url
-},{merge:true});
-
+const res=await fetch("https://api.imgbb.com/1/upload?key="+IMGBB_KEY,{
+method:"POST",
+body:formData
 });
 
-/* LOGOUT */
+const data=await res.json();
+const imageUrl=data.data.url;
+
+await setDoc(doc(db,"users",currentUID),{photo:imageUrl},{merge:true});
+
+alert("Photo uploaded successfully");
+
+}catch(e){
+alert("Upload failed");
+}
+
+});
 
 window.logout=async function(){
 await signOut(auth);
@@ -510,5 +383,4 @@ location.href="index.html";
 
 </script>
 
-</body>
-</html>
+</body></html>
