--- a/feeds.html
+++ b/feeds.html
@@ -58,6 +58,11 @@ background:linear-gradient(135deg,#3b82f6,#2563eb);
 color:#fff;
 }
 
+.danger{
+background:linear-gradient(135deg,#ef4444,#dc2626);
+color:#fff;
+}
+
 .row{
 display:flex;
 gap:10px;
@@ -173,14 +178,8 @@ Create Post
 style="width:100%;margin-top:10px;border-radius:16px;display:none;">
 
 <div class="row">
-<button id="postBtn"
-class="primary"
-onclick="createFeed()">
-Post
-</button>
+<button id="postBtn" class="primary" onclick="createFeed()">Post</button>
 </div>
-
-<div id="postMsg" class="subText"></div>
 
 </div>
 
@@ -190,21 +189,10 @@ Post
 
 <div class="bottomnav">
 
-<button class="active" onclick="location.href='feeds.html'">
-📰 Feeds
-</button>
-
-<button onclick="location.href='friends.html'">
-👥 Friends
-</button>
-
-<button onclick="location.href='message.html'">
-💬 Messages
-</button>
-
-<button onclick="location.href='profile.html'">
-👤 Profile
-</button>
+<button class="active" onclick="location.href='feeds.html'">📰 Feeds</button>
+<button onclick="location.href='friends.html'">👥 Friends</button>
+<button onclick="location.href='message.html'">💬 Messages</button>
+<button onclick="location.href='profile.html'">👤 Profile</button>
 
 </div>
 
@@ -213,10 +201,7 @@ Post
 import { initializeApp }
 from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 
-import {
-getAuth,
-onAuthStateChanged
-}
+import { getAuth, onAuthStateChanged }
 from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
 import {
@@ -248,7 +233,6 @@ const IMGBB_KEY="5b417e8de4a883f7425eeda12dc38f06";
 
 let currentUID=null;
 let currentEmail="";
-let isPosting=false;
 
 const feedsList=document.getElementById("feedsList");
 
@@ -271,28 +255,10 @@ loadFeeds();
 
 });
 
-window.addEventListener("beforeunload",async()=>{
-if(currentUID){
-await updateDoc(doc(db,"users",currentUID),{
-online:false,
-lastSeen:Date.now()
-});
-}
-});
-
 window.createFeed=async function(){
-
-if(isPosting) return;
 
 const text=document.getElementById("feedInput").value.trim();
 const file=document.getElementById("feedPhoto").files[0];
-
-if(!text && !file){
-alert("Write something or add photo");
-return;
-}
-
-isPosting=true;
 
 let previewURL="";
 if(file){
@@ -319,14 +285,10 @@ document.getElementById("feedInput").value="";
 document.getElementById("feedPhoto").value="";
 document.getElementById("previewPhoto").style.display="none";
 
-isPosting=false;
-
 if(file){
 
 const formData=new FormData();
 formData.append("image",file);
-
-try{
 
 const res=await fetch(
 "https://api.imgbb.com/1/upload?key="+IMGBB_KEY,
@@ -336,15 +298,9 @@ const res=await fetch(
 const data=await res.json();
 
 if(data.success){
-
 await updateDoc(doc(db,"feeds",newPost.id),{
 photo:data.data.url
 });
-
-}
-
-}catch(e){
-console.log("upload error");
 }
 
 }
@@ -390,9 +346,7 @@ class="avatar ${online?'online':''}">
 
 </div>
 
-<div style="margin-top:10px">
-${d.text||""}
-</div>
+<div style="margin-top:10px">${d.text||""}</div>
 
 ${d.photo?`<img src="${d.photo}" class="feedPhoto">`:""}
 
@@ -405,15 +359,29 @@ ${liked?"💙 Liked":"👍 Like"}
 
 </button>
 
-<span class="subText">
-${likesArr.length} likes
-</span>
+<span class="subText">${likesArr.length} likes</span>
+
+${d.uid===currentUID?`
+<button class="danger" onclick="deletePost('${id}')">Delete</button>
+`:""}
+
+</div>
+
+<div style="margin-top:10px">
+
+<input id="commentInput-${id}" placeholder="Write comment">
+
+<button onclick="sendComment('${id}')">Send</button>
+
+<div id="comments-${id}"></div>
 
 </div>
 
 </div>
 
 `;
+
+loadComments(id);
 
 }
 
@@ -438,19 +406,84 @@ await updateDoc(ref,{likes});
 
 };
 
+window.deletePost=async function(id){
+if(confirm("Delete post?")){
+await deleteDoc(doc(db,"feeds",id));
+}
+};
+
+window.sendComment=async function(feedId){
+
+const input=document.getElementById("commentInput-"+feedId);
+const text=input.value.trim();
+
+if(!text) return;
+
+await addDoc(collection(db,"comments"),{
+feedId:feedId,
+uid:currentUID,
+name:"User",
+text:text,
+createdAt:Date.now()
+});
+
+input.value="";
+
+};
+
+function loadComments(feedId){
+
+const q=query(collection(db,"comments"),where("feedId","==",feedId));
+
+onSnapshot(q,(snap)=>{
+
+const box=document.getElementById("comments-"+feedId);
+if(!box) return;
+
+box.innerHTML="";
+
+snap.forEach(docSnap=>{
+
+const d=docSnap.data();
+
+box.innerHTML+=`
+
+<div class="comment">
+
+<div>
+<b>${d.name}</b>: ${d.text}
+</div>
+
+${d.uid===currentUID?`
+<button class="danger" onclick="deleteComment('${docSnap.id}')">Delete</button>
+`:""}
+
+</div>
+
+`;
+
+});
+
+});
+
+}
+
+window.deleteComment=async function(id){
+if(confirm("Delete comment?")){
+await deleteDoc(doc(db,"comments",id));
+}
+};
+
 document.getElementById("feedPhoto").addEventListener("change",function(){
 
 const file=this.files[0];
-
 if(!file) return;
 
 const reader=new FileReader();
 
 reader.onload=function(e){
-
 document.getElementById("previewPhoto").src=e.target.result;
 document.getElementById("previewPhoto").style.display="block";
-
 };
 
 reader.readAsDataURL(file);
